# surfer

./: .gitignore  .travis.yml  README.md
.github/workflows/: ci.yaml
android/acontrol/app/: build.gradle
android/acontrol/app/src/androidTest/java/eboard/acontrol/: ApplicationTest.java  SerialInterfaceTest.java
android/acontrol/app/src/main/: AndroidManifest.xml
android/acontrol/app/src/main/java/eboard/acontrol/: LoggingFile.java  SectionsPagerAdapter.java  acontrol.java
android/acontrol/app/src/main/java/eboard/acontrol/fragments/: ChannelFragment.java  ChannelView.java  SerialRawFragment.java  SpeedControlFragment.java
android/acontrol/app/src/main/java/eboard/channel/: Channel.java  ChannelBuffer.java  ChannelDef.java  ChannelValue.java
android/acontrol/app/src/main/java/eboard/serial/: BTSerial.java  IChannelOutputReceiver.java  ISerialMessageReceiver.java  Message.java  MessagePayload.java  SerialInterface.java
android/acontrol/app/src/main/res/layout/: activity_acontrol.xml  channels_acontrol.xml  fragment_acontrol.xml  serial_raw_acontrol.xml  speed_control_fragment.xml
android/acontrol/app/src/main/res/menu/: menu_acontrol.xml
android/acontrol/app/src/main/res/values/: strings.xml
arduino/surfer/: ADCReadout.c  ADCReadout.h  CMakeLists.txt  ChannelDef.h  Channels.c  Channels.h  Logging.h  MotorControl.h  PWMWrite.c  PWMWrite.h  SerialInterface.c  SerialInterface.h  SignalProcess.c  SignalProcess.h  StreamChannel.c  StreamChannel.h  surfer.ino
arduino/surfer/x86/: ConsoleIO.c  ConsoleIO.h  surfer_test.c  surfer_test_signalp.h  surfer_x86.c
